Bug 1177505 - Make all continuations fluid within non-bidi paragraphs. r=smontagu, a=ritu